# pos-pipeline-core-etl

./: .cursorrules  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  DOCUMENTATION_STRUCTURE_SUMMARY.md  EXAMPLE_UPDATE_SUMMARY.md  FINAL_SUMMARY.md  LIVE_TESTS_QUICK_REFERENCE.md  LIVE_TEST_SUMMARY.md  NAIVE_MODEL_IMPLEMENTATION.md  README.md  description.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cursor/: worktrees.json
.cursor/plans/: phase-2-etl-api-refactor-b967d619.plan.md  phase-2-etl-api-refactor-final.plan.md  pos-core-etl-modernization-0a881211.plan.md  pos-etl-package-modernization-59aa00-8ed1a7e0.plan.md  setup-worktree-windows.ps1
.cursor/rules/: POST_CHANGE_QC.md
.github/workflows/: ci.yml  docs.yml
api-reference/etl/: index.html
api-reference/exceptions/: index.html
api-reference/forecasting/: index.html
api-reference/qa/: index.html
dev-notes/: index.html
development/DOCUMENTATION_STRUCTURE_SUMMARY/: index.html
development/dev-notes/: index.html
development/new_api_plan/: index.html
docs/: dev-notes.md  index.md  naive-last-week-model-specification.md
docs/api-reference/: etl.md  exceptions.md  forecasting.md  qa.md
docs/development/: dev-notes.md  new_api_plan.md
docs/user-guide/: concepts.md  configuration.md  examples.md  installation.md  quickstart.md
examples/: README.md  branches_usage_example.py  naive_forecast_example.py  payments_forecast.py  payments_full_etl.py  sales_group_branches_example.py  sales_week_by_group.py
search/: search_index.json
src/pos_core/: __init__.py  branches.py  config.py  exceptions.py  paths.py
src/pos_core/etl/: __init__.py  api.py  branch_config.py  build_payments_dataset.py  config.py  metadata.py  payments.py  queries.py  sales.py  sales_config.py  utils.py
src/pos_core/etl/a_extract/: HTTP_extraction.py
src/pos_core/etl/b_transform/: pos_cleaning_utils.py  pos_excel_payments_cleaner.py  pos_excel_sales_details_cleaner.py  pos_excel_transfer_cleaner.py
src/pos_core/etl/c_load/: aggregate_payments_by_day.py  aggregate_sales_details_by_group.py  aggregate_sales_details_by_ticket.py  aggregate_transfer_data.py
src/pos_core/etl/core/: __init__.py  sales_by_ticket.py
src/pos_core/etl/marts/: __init__.py  payments_daily.py  sales_by_group.py  sales_by_ticket.py  transfers.py
src/pos_core/etl/raw/: __init__.py  extraction.py
src/pos_core/etl/staging/: __init__.py  cleaning_utils.py  payments_cleaner.py  sales_cleaner.py  transfer_cleaner.py
src/pos_core/forecasting/: __init__.py  api.py  cash_flow.py  config.py  date_formatters.py  deposit_schedule.py  pipeline.py  types.py
src/pos_core/forecasting/data/: __init__.py  loaders.py  preparation.py
src/pos_core/forecasting/formatters/: __init__.py  console.py  telegram.py
src/pos_core/forecasting/models/: __init__.py  arima.py  base.py  naive.py
src/pos_core/order_times/: __init__.py  extract.py  metadata.py  raw.py
src/pos_core/payments/: __init__.py  aggregate.py  api.py  core.py  extract.py  marts.py  metadata.py  raw.py  transform.py
src/pos_core/qa/: README  __init__.py  api.py  qa_payments.py
src/pos_core/sales/: __init__.py  aggregate.py  api.py  core.py  extract.py  marts.py  metadata.py  raw.py  transform.py
src/pos_core/transfers/: __init__.py  aggregate.py  core.py  extract.py  marts.py  metadata.py  raw.py  transform.py
tests/: LIVE_TESTS_QUICK_REFERENCE.md  LIVE_TEST_SUMMARY.md  README.md  TESTING_AUDIT.md  TEST_DESCRIPTIONS.md  __init__.py  run_debug_test.py  test_etl_queries.py  test_etl_smoke.py  test_forecasting_smoke.py  test_grain_assertions.py  test_naive_model.py  test_order_times_raw.py  test_qa_smoke.py  test_sales_by_ticket.py  test_transfers_smoke.py  test_utils.py
user-guide/concepts/: index.html
user-guide/configuration/: index.html
user-guide/examples/: index.html
user-guide/installation/: index.html
user-guide/quickstart/: index.html
