[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pos-core-etl"
version = "0.1.0"
description = "Point of Sale ETL pipeline with forecasting and QA capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ToxicFyre"}
]
keywords = [
    "pos",
    "point-of-sale",
    "etl",
    "forecasting",
    "time-series",
    "data-processing",
    "retail",
    "payments"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "statsmodels>=0.12.0",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ToxicFyre/pos-pipeline-core-etl"
Documentation = "https://toxicfyre.github.io/pos-pipeline-core-etl/"
Repository = "https://github.com/ToxicFyre/pos-pipeline-core-etl.git"
Issues = "https://github.com/ToxicFyre/pos-pipeline-core-etl/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
# Ignore statsmodels and other untyped dependencies
[[tool.mypy.overrides]]
module = [
    "statsmodels.*",
    "statsmodels",
    "bs4.*",
    "bs4",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

