[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pos-core-etl"
version = "0.1.1"
description = "Point of Sale ETL pipeline with forecasting and QA capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ToxicFyre"}
]
keywords = [
    "pos",
    "point-of-sale",
    "etl",
    "forecasting",
    "time-series",
    "data-processing",
    "retail",
    "payments"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "statsmodels>=0.12.0",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ToxicFyre/pos-pipeline-core-etl"
Documentation = "https://toxicfyre.github.io/pos-pipeline-core-etl/"
Repository = "https://github.com/ToxicFyre/pos-pipeline-core-etl.git"
Issues = "https://github.com/ToxicFyre/pos-pipeline-core-etl/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "live: marks tests that require live credentials and network access (deselect with '-m \"not live\"')",
]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_configs = true

ignore_missing_imports = true  # keep the global default

# Global defaults: fairly strict
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
allow_redefinition = false

# Third-party overrides (keep what you already had)
[[tool.mypy.overrides]]
module = [
    "statsmodels.*",
    "statsmodels",
    "bs4.*",
    "bs4",
]
ignore_missing_imports = true

# Tests: let them be more relaxed
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["pos_core.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # import sorting
  "N",   # pep8-naming
  "UP",  # pyupgrade (modern Python)
  "B",   # flake8-bugbear (bug-prone code)
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "ARG", # unused arguments
  "T10", # debugger usage (pdb, etc.)
  "D",   # docstrings (pydocstyle)
  "RUF", # Ruff-specific rules (incl. unused noqa)
]
ignore = [
  "E203",  # slice formatting compatibility
  "E266",
  "E501",  # line length handled by formatter
  "D203",  # incompatible with D211 (no-blank-line-before-class); prefer D211 per PEP 257
  "D213",  # incompatible with D212 (multi-line-summary-first-line); prefer D212 per PEP 257
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow re-export imports in package __init__.py
"tests/*" = [
  "D100", "D101", "D102", "D103", "D104",  # no docstring police in tests
  "T20",                                   # allow print in tests
]
"scripts/*" = [
  "D100", "D101", "D102", "D103", "D104",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
preview = true

